kustomize/overlays/dev/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: appuio
spec:
  strategy:
    blueGreen:
      activeService: appuio
      previewService: appuio-preview
      autoPromotionEnabled: true
  replicas: 1
  template:
    spec:
      containers:
        - name: appuio
          image: tsurankov/example-spring-boot-helloworld:1.2.0
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
