kustomize/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-spring-boot
spec:
  rules:
    - host: example-spring-boot-dev-01.crinfra.net
      http:
        paths:
          - backend:
              service:
                name: example-spring-boot
                port:
                  number: 8080
            path: /
            pathType: Prefix
